Home page of portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,43 +2,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Personal Portfolio website</title>
   <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-  <div class="web-developer">
-    <h2>Web Developer</h2>
+  <div class ="hero">
+    <nav>
+      <header class="web">
+        Web developer
+      </header>
+      <ul>
+        <li><a href ="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">PROJECTS</a></li>
+      </ul>
+
+    </nav>
+
+    <div class="detail">
+      <h2>Hello I'm</h2>
+      <h1 class="element">Yingying Sroy</h1>
+
+      <p>I am a fresh graduate. I am looking for a suitable job for my skill sets.
+        <br> My hobby are watching K-drama, reading books, and studying
+        <br> things in IT world.
+      </p>
+
+      <a href="#">HIRE ME</a>
+    </div>
+    
+    <div class="images">
+     
+      <img src="images/developer.png" alt="girl">
+
+    </div>
+
+    <div>
+      <footer>
+        Email
+      </footer>
+    </div>
   </div>
-
-  <nav class="navigation">
-    <a href="#">Home</a>
-    <a href="About.html">About</a>
-    <a href="Project.html">Projects</a>
-  </nav>
-
-  <div>
-    <h3>I'm </h3>
-    <h2>Yingying Sroy</h2>
-    <h4>Computer Science fresh graduate</h4>
-
-    <p>I am a  fresh graduate. I'm looking for a suitable job for my skill sets. My hobby are K-drama, reading books, and studying new thing in IT world. </p>
-
-    <button class="button">Hire me</button>
-  </div>
-
-  <footer>
-    <p>Email
-    <a href="mailto:hege@example.com">yying6890@gmail.com</a></p>
-    <p>LinkedIn
-      <a href="#">Yingying-Sroy</a>
-    </p>
-    <p>Github<a href="#">Yinh98s</a></p>
-  </footer>
-
-  <footer>
-    <img src="images/facebook.png" alt="">
-    <img src="images/instagram.png" alt="">
-    <img src="images/twitter.png" alt="">
-  </footer>
 </body>
 </html>
