update About page

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
       </header>
       <ul>
         <li><a href ="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">PROJECTS</a></li>
       </ul>
 
@@ -30,18 +30,41 @@
 
       <a href="#">HIRE ME</a>
     </div>
-    
+
     <div class="images">
      
       <img src="images/developer.png" alt="girl">
-
-    </div>
-
-    <div>
-      <footer>
-        Email
-      </footer>
     </div>
   </div>
+
+
+
+ <div>
+  <footer>
+    <div class="footer-item">Email
+      <br>
+      <u class="items">
+        <a href="mailto:your-email@example.com">yying6890@gmail.com</a>
+      </u>
+    </div>
+    <div class ="footer-item">LinkedIn
+      <br>
+      <u class="items">
+        <a href="mailto:your-email@example.com">Yingying-Sroy</a>
+      </u>
+    </div>
+    <div class = "footer-item">GitHub
+      <br>
+      <u class="items">
+        <a href="mailto:your-email@example.com">Yinh98s</a>
+      </u>
+    </div>
+    <div class="social-icons">
+      <img src="images/facebook.png" alt="Facebook" class="social-icon">
+      <img src="images/instagram.png" alt="Instagram" class="social-icon">
+      <img src="images/twitter.png" alt="Twitter" class="social-icon">
+    </div>
+  </footer>
+ </div>
 </body>
 </html>
