update - back button

--- a/About.html
+++ b/About.html
@@ -65,6 +65,7 @@
   </style>
 </head>
 <body>
+  <button onclick="goBack()">Go Back</button>
   <div class="container">
     <div class="content-box">
       <h4> >> About Me</h4>
@@ -111,5 +112,12 @@
     </h3>
   </div>
   </div>
+
+  <script>
+    function goBack() {
+    window.history.back();
+  }
+ </script>
+
 </body>
 </html>
