--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
         Web developer
       </header>
       <ul>
-        <li><a href ="#">HOME</a></li>
+        <li><a href ="portfolio.html">HOME</a></li>
         <li><a href="About.html">ABOUT</a></li>
-        <li><a href="#">PROJECTS</a></li>
+        <li><a href="Project.html">PROJECTS</a></li>
       </ul>
 
     </nav>
@@ -36,8 +36,6 @@
       <img src="images/developer.png" alt="girl">
     </div>
   </div>
-
-
 
  <div>
   <footer>
@@ -66,5 +64,7 @@
     </div>
   </footer>
  </div>
+
+
 </body>
 </html>
